# tree-sitter-smallbasic

./: .gitignore  CMakeLists.txt  LR_Items_By_Core.txt  LR_Items_Dump.txt  LR_Items_State_Map.txt  Makefile  Package.swift  action_table.txt  debug_log.txt  go.mod  goto_table.txt  grammar.js  log.html  parser.exp  parser.lib  parser_full_log.txt  parser_states.txt  prod_rules.txt  pyproject.toml  saved_action_table.txt  saved_goto_table.txt  saved_lexical_grammar.txt  saved_lexical_grammar_pretty.txt  saved_parse_state_info.txt  saved_parse_state_info_name.txt  saved_parse_state_info_pretty.txt  saved_parse_table.txt  saved_parse_table_pretty.txt  saved_prod_rules.txt  saved_syntax_grammar.txt  saved_syntax_grammar_pretty.txt  setup.py  smallbasic.ilk  token_mapping.json  tree-sitter.json
SB_Data/: 01_HelloWorld.data  02_FontYellowColor.data  03_Variables.data  04_Temperature.data  05_If.data  06_Goto.data  07_For.data  08_ForStep.data  09_While.data  10_GraphicWindow.data  11_GraphicWindowConfig.data  12_DrawLine.data  13_LineColor.data  14_LineThickness.data  15_Rectangle.data  16_Ellipse.data  17_Circle.data  18_Random.data  19_Fractal.data  20_Subroutine.data  21_Array.data  22_ArrayIndex.data  23_MultiDimArray.data  24_Event.data  25_Events.data  26_Flickr.data  27_FlickrRepeat.data  Bricks.data  CollisionPhysics.data  Grid.data  GridAnimation.data  Sokoban.data  Tetris.data
SB_Data_TS1/: 01_HelloWorld.data  02_FontYellowColor.data  03_Variables.data  04_Temperature.data  05_If.data  06_Goto.data  07_For.data  08_ForStep.data  09_While.data  10_GraphicWindow.data  (+24 more)
(+13 files in other folders)
